# NAmi-Engine

./: CMakeLists.txt  README.md
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/Core/: CMakeLists.txt
src/Core/include/Core/: Application.hpp
src/Core/src/: Application.cpp  main.cpp
src/Graphic/: CMakeLists.txt
src/Graphic/include/Graphic/: Window.hpp
src/Graphic/src/: Window.cpp
src/Util/: CMakeLists.txt
src/Util/include/Util/: Log.hpp
src/Util/src/: Log.cpp
